some fixes... cannot align the product price in recommendations correctly anyway

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .logo {
     display:block;
-    margin: 16px auto 15px 91px;
+    margin: 16px auto 16px 91px;
     width: 138px;
     height: 10px;
   }
@@ -22,7 +22,19 @@ body {
 .line-nomargin2 {
   height: 1px;
   background-color: #c6c6c6;
-  margin: 32px auto 32px auto;
+  margin: 36px auto 16px auto;
+}
+
+.line-nomargin3 {
+  height: 1px;
+  background-color: #c6c6c6;
+  margin: 32px auto 16px auto;
+}
+
+.line-nomargin4 {
+  height: 1px;
+  background-color: #c6c6c6;
+  margin: auto auto 16px auto;
 }
 
 .line-margin {
@@ -63,6 +75,7 @@ h2 {
   font-size: 16px;
   font-weight: normal;
   text-align: left;
+  margin: 16px auto 32px auto;
 }
 
 .recommend-title {
@@ -71,7 +84,8 @@ h2 {
   font-weight: normal;
   text-align: left;
   border-bottom: 1px solid black;
-  margin: 16px auto 16px 16px;
+  padding-bottom: 8px;
+  margin: 32px auto 23px 16px;
 }
 
 .product-recommendations {
@@ -93,13 +107,13 @@ h2 {
 
 .product-recom-title {
   width: 130px;
-  height: 38px;
   font-family: Lora;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: left;
   color: #171717;
+  margin-top: 6px;
 
 }
 
@@ -107,7 +121,6 @@ h2 {
   font-family: Raleway;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.19;
   text-align: left;
   color: #999999;
 
@@ -155,11 +168,20 @@ p {
 .colour {
   font-size: 12px;
   margin: 16px auto auto 16px;
+  line-height: 16px;
 
 }
 
 .product-button {
   display: inline-block;
+}
+
+.description-button {
+  border: none;
+  background-color: white;
+  font-size: 12px;
+  margin: auto 16px auto 16px;
+  padding: 0;
 }
 
 
@@ -184,7 +206,7 @@ p {
 
 
 .button-size {
-  height: 40px;
+  height: 48px;
   width: 288px;
   border: 1px solid black;
   background-color: #000000;
@@ -196,7 +218,7 @@ p {
 }
 
 .button-store {
-  height: 40px;
+  height: 48px;
   width: 288px;
   border: 1px solid black;
   background-color: #ffffff;
@@ -214,16 +236,10 @@ p {
   font-size: 12px;
   color: black;
   font-weight: normal;
-  margin: 24px auto auto 16px;
+  margin: 24px auto 16px 16px;
   padding: 0px 0px 0px 0px;
 }
 
-.description-button {
-  border: none;
-  background-color: white;
-  font-size: 12px;
-  margin: auto 16px auto 16px;
-}
 
 
 
@@ -279,4 +295,8 @@ button.white {
     text-align: center;
     font-weight: 400;
 
+}
+
+.custom-margin {
+  line-height: 24px;
 }
